--- a/src/components/comment.module.scss
+++ b/src/components/comment.module.scss
@@ -1,28 +1,31 @@
-.container{
-    
+.container {
+
     color: black;
-    background-color: rgba(246,246,246,255);
+    background-color: rgba(246, 246, 246, 255);
     padding: 1rem;
     height: auto;
     overflow: hidden;
-    form{
-        input{
+
+    form {
+        input {
             width: 100%;
             margin-bottom: 12px;
             padding: 10px;
             margin-top: 1rem;
             // text-align: center;
         }
-        textarea{
+
+        textarea {
             width: 100%;
             margin-bottom: 12px;
             padding: 10px;
             height: 5rem;
             resize: none;
         }
-        button{
+
+        button {
             float: right;
-            background-color:rgba(0,148,255,255);
+            background-color: rgba(0, 148, 255, 255);
             outline: none;
             border: none;
             padding: .4rem 1rem;
@@ -30,4 +33,45 @@
             border-radius: 5px;
         }
     }
+}
+
+.commentContainer {
+    position: relative;
+    background-color: rgba(246, 246, 246, 255);
+    margin: 1rem 0;
+    padding: .7rem;
+    .delImg{
+        position: absolute;
+        top: 40%;
+        right: -1.4%;
+        img{
+            width: 2rem;
+        }
+    }
+    .commentHeadline {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .userName{
+            font-size: large;
+            font-weight: 800;
+            text-transform: capitalize;
+        }
+    }
+    .operationbtnContainer{
+        display: flex;
+        // justify-content: center;
+        align-items: center;
+        color: rgba(0,148,255,255);
+        >*{
+            padding-right: 1rem;
+            cursor: pointer;
+        }
+    }
+    .mainComment{
+        padding: 1rem 0;
+    }
+}
+.repliesContainer{
+    margin: 1rem;
 }
